--- a/hackrpi2020/android/app/build.gradle
+++ b/hackrpi2020/android/app/build.gradle
@@ -38,7 +38,7 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.hackrpi2020"
+        applicationId "com.mike.hackrpi2020"
         minSdkVersion 16
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
